package it.unibo.samplejavafx.mvcexample.model;

public record Point2D(int x, int y) {

}